added great and fresh tea section with description

--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
     <header class="container mx-auto">
         <div class="hero">
             <div class="hero-content">
-                <div class=" lg:flex">
+                <div class="lg:flex">
                     <div>
-                        <h1 class=" text-4xl lg:text-7xl font-extrabold">I is good <br> Tea Time at The <br>Tea house
+                        <h1 class=" text-4xl lg:text-7xl font-extrabold">It is good Tea <br> Time 
+                            at The <br> Tea house
                         </h1>
                         <p class="py-6 font-semibold">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet
                             suscipit, quos fugit quisquam quam eligendi minima aliquid beatae blanditiis quasi ad quae
@@ -113,6 +114,38 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <!-- great tea fresh tea section -->
+        <section class="my-32 flex flex-col lg:flex-row gap-12">
+                <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
+             <div class="rounded-xl bg-gradient-to-r from-[#FF0000] to-[#FF8938] opacity-10 h-36"></div>
+                    <div class="rounded-xl row-span-2 bg-[#E6A6231A] flex justify-center items-center py-8">
+                        <img src="./images/fresh-1.png" alt="">
+                    </div>
+                    <div class="rounded-xl row-span-2 bg-[#574A261A] flex justify-center items-center py-8">
+                        <img src="./images/fresh-2.png" alt="">
+                    </div>
+                    <div class="rounded-xl bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF] h-36">
+    
+                    </div>    
+                </div>
+        <!-- description of great tea section -->
+            <div class="space-y-5 flex-1 p-3 lg:p-7">
+                <h3 class="text-5xl font-extrabold">
+                     Great tea, Freshly <br> Presented
+                </h3>
+                <p class="leading-7 font-medium">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat non earum corrupti debitis dolorum error cumque illum voluptatum quam aliquam doloribus alias, magni tenetur eos iusto amet ullam molestiae? Aliquam?
+                </p>
+
+                <h3 class="text-xl font-extrabold">Uniqe Test</h3>
+                <p class="leading-7 font-medium">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam voluptate debitis quibusdam optio corrupti.</p>
+
+                <h3 class="text-xl font-extrabold">Premium Quality</h3>
+                <p class="leading-7 font-medium">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam voluptate debitis quibusdam optio corrupti.</p>
+            </div>
+        
         </section>
     </main>
 
