added super claints section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="hero-content">
                 <div class="lg:flex">
                     <div>
-                        <h1 class=" text-4xl lg:text-7xl font-extrabold">It is good Tea <br> Time 
+                        <h1 class=" text-4xl lg:text-7xl font-extrabold">It is good Tea <br> Time
                             at The <br> Tea house
                         </h1>
                         <p class="py-6 font-semibold">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet
@@ -81,7 +81,7 @@
             <!-- tea card container -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mt-12">
 
-                   <!-- first card -->
+                <!-- first card -->
                 <div class="card bg-base-100 rounded-xl bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] p-8 shadow-xl">
                     <figure><img src="/images/tea-1.png" alt="Shoes" /></figure>
                     <div class="card-body">
@@ -89,7 +89,7 @@
                         <p>Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
-                   <!-- second card -->
+                <!-- second card -->
                 <div class="card bg-base-100 rounded-xl bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] p-8 shadow-xl">
                     <figure><img src="/images/tea-2.png" alt="Shoes" /></figure>
                     <div class="card-body">
@@ -97,7 +97,7 @@
                         <p>Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
-                   <!-- third card -->
+                <!-- third card -->
                 <div class="card bg-base-100 rounded-xl bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] p-8 shadow-xl">
                     <figure><img src="/images/tea-3.png" alt="Shoes" /></figure>
                     <div class="card-body">
@@ -105,7 +105,7 @@
                         <p>Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
-                   <!-- fourth card -->
+                <!-- fourth card -->
                 <div class="card bg-base-100 rounded-xl bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] p-8 shadow-xl">
                     <figure><img src="/images/tea-4.png" alt="Shoes" /></figure>
                     <div class="card-body">
@@ -118,34 +118,90 @@
 
         <!-- great tea fresh tea section -->
         <section class="my-32 flex flex-col lg:flex-row gap-12">
-                <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
-             <div class="rounded-xl bg-gradient-to-r from-[#FF0000] to-[#FF8938] opacity-10 h-36"></div>
-                    <div class="rounded-xl row-span-2 bg-[#E6A6231A] flex justify-center items-center py-8">
-                        <img src="./images/fresh-1.png" alt="">
-                    </div>
-                    <div class="rounded-xl row-span-2 bg-[#574A261A] flex justify-center items-center py-8">
-                        <img src="./images/fresh-2.png" alt="">
-                    </div>
-                    <div class="rounded-xl bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF] h-36">
-    
-                    </div>    
+            <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
+                <div class="rounded-xl bg-gradient-to-r from-[#FF0000] to-[#FF8938] opacity-10 h-36"></div>
+                <div class="rounded-xl row-span-2 bg-[#E6A6231A] flex justify-center items-center py-8">
+                    <img src="./images/fresh-1.png" alt="">
                 </div>
-        <!-- description of great tea section -->
+                <div class="rounded-xl row-span-2 bg-[#574A261A] flex justify-center items-center py-8">
+                    <img src="./images/fresh-2.png" alt="">
+                </div>
+                <div class="rounded-xl bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF] h-36">
+                </div>
+            </div>
+            <!-- description of great tea section -->
             <div class="space-y-5 flex-1 p-3 lg:p-7">
                 <h3 class="text-5xl font-extrabold">
-                     Great tea, Freshly <br> Presented
+                    Great tea, Freshly <br> Presented
                 </h3>
                 <p class="leading-7 font-medium">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat non earum corrupti debitis dolorum error cumque illum voluptatum quam aliquam doloribus alias, magni tenetur eos iusto amet ullam molestiae? Aliquam?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat non earum corrupti debitis dolorum
+                    error cumque illum voluptatum quam aliquam doloribus alias, magni tenetur eos iusto amet ullam
+                    molestiae? Aliquam?
                 </p>
 
                 <h3 class="text-xl font-extrabold">Uniqe Test</h3>
-                <p class="leading-7 font-medium">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam voluptate debitis quibusdam optio corrupti.</p>
+                <p class="leading-7 font-medium">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam
+                    voluptate debitis quibusdam optio corrupti.</p>
 
                 <h3 class="text-xl font-extrabold">Premium Quality</h3>
-                <p class="leading-7 font-medium">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam voluptate debitis quibusdam optio corrupti.</p>
+                <p class="leading-7 font-medium">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam
+                    voluptate debitis quibusdam optio corrupti.</p>
             </div>
-        
+        </section>
+        <!-- super clints section -->
+        <section class="my-24 flex p-24 bg-gradient-to-r gap-12 from-[#FF8938] to-[#FF0000]">
+            <div class="flex items-center pr-40">
+                <div>
+                    <h2 class="text-5xl font-extrabold text-white">
+                        Meet Our Super <br>
+                        Clients</h2>
+                    <p class="text-white my-5 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam laboriosam
+                        quisquam, tempora, atque ipsum, vitae accusamus est enim cumque mollitia inventore repellendus sit
+                        porro illo laborum quaerat! Illum, facere beatae.</p>
+                    <button class="btn bg-white text-xl font-semibold">Show All</button>
+                </div>
+            </div>
+
+            <!-- review container -->
+            <div class="relative">
+            <!-- next review -->
+            <div class="p-10 relative mb-16 opacity-40 z-10 bg-white rounded-lg">
+                <img class="absolute -left-5 -top-5 border-4 border-white bg-white rounded-full"
+                    src="./images/client.png" alt="">
+                <p class="leading-7 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate doloribus velit
+                    facilis aliquam quae ab vel distinctio!</p>
+                <h3 class="font-extrabold mt-5">llham yuda</h3>
+                <p>businessman</p>
+                <div class="flex justify-end">
+                    <img src="./images/circles.png" alt="">
+                </div>
+            </div>
+            <!--  current review -->
+            <div class="p-10 absolute top-40 right-40 lg:w-[433px] z-20 bg-white rounded-lg">
+                <img class="absolute -left-5 -top-5 border-4 border-white bg-white rounded-full"
+                    src="./images/client.png" alt="">
+                <p class="leading-7 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate doloribus velit
+                    facilis aliquam quae ab vel distinctio!</p>
+                <h3 class="font-extrabold mt-5">llham yuda</h3>
+                <p>businessman</p>
+                <div class="flex justify-end">
+                    <img src="./images/circles.png" alt="">
+                </div>
+            </div>
+            <!-- previus review -->
+            <div class="p-10 relative opacity-40 bg-white z-10 rounded-lg">
+                <img class="absolute -left-5 -top-5 border-4 border-white bg-white rounded-full"
+                    src="./images/client.png" alt="">
+                <p class="leading-7 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate doloribus velit
+                    facilis aliquam quae ab vel distinctio!</p>
+                <h3 class="font-extrabold mt-5">llham yuda</h3>
+                <p>businessman</p>
+                <div class="flex justify-end">
+                    <img src="./images/circles.png" alt="">
+                </div>
+            </div>
+        </div>
         </section>
     </main>
 
