--- a/index.html
+++ b/index.html
@@ -156,8 +156,10 @@
                     <h2 class="text-5xl font-extrabold text-white">
                         Meet Our Super <br>
                         Clients</h2>
-                    <p class="text-white my-5 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam laboriosam
-                        quisquam, tempora, atque ipsum, vitae accusamus est enim cumque mollitia inventore repellendus sit
+                    <p class="text-white my-5 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+                        laboriosam
+                        quisquam, tempora, atque ipsum, vitae accusamus est enim cumque mollitia inventore repellendus
+                        sit
                         porro illo laborum quaerat! Illum, facere beatae.</p>
                     <button class="btn bg-white text-xl font-semibold">Show All</button>
                 </div>
@@ -165,47 +167,99 @@
 
             <!-- review container -->
             <div class="relative">
-            <!-- next review -->
-            <div class="p-10 relative mb-16 opacity-40 z-10 bg-white rounded-lg">
-                <img class="absolute -left-5 -top-5 border-4 border-white bg-white rounded-full"
-                    src="./images/client.png" alt="">
-                <p class="leading-7 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate doloribus velit
-                    facilis aliquam quae ab vel distinctio!</p>
-                <h3 class="font-extrabold mt-5">llham yuda</h3>
-                <p>businessman</p>
-                <div class="flex justify-end">
-                    <img src="./images/circles.png" alt="">
+                <!-- next review -->
+                <div class="p-10 relative mb-16 opacity-40 z-10 bg-white rounded-lg">
+                    <img class="absolute -left-5 -top-5 border-4 border-white bg-white rounded-full"
+                        src="./images/client.png" alt="">
+                    <p class="leading-7 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate doloribus
+                        velit
+                        facilis aliquam quae ab vel distinctio!</p>
+                    <h3 class="font-extrabold mt-5">llham yuda</h3>
+                    <p>businessman</p>
+                    <div class="flex justify-end">
+                        <img src="./images/circles.png" alt="">
+                    </div>
+                </div>
+                <!--  current review -->
+                <div class="p-10 absolute top-40 right-40 lg:w-[433px] z-20 bg-white rounded-lg">
+                    <img class="absolute -left-5 -top-5 border-4 border-white bg-white rounded-full"
+                        src="./images/client.png" alt="">
+                    <p class="leading-7 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate doloribus
+                        velit
+                        facilis aliquam quae ab vel distinctio!</p>
+                    <h3 class="font-extrabold mt-5">llham yuda</h3>
+                    <p>businessman</p>
+                    <div class="flex justify-end">
+                        <img src="./images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- previus review -->
+                <div class="p-10 relative opacity-40 bg-white z-10 rounded-lg">
+                    <img class="absolute -left-5 -top-5 border-4 border-white bg-white rounded-full"
+                        src="./images/client.png" alt="">
+                    <p class="leading-7 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate doloribus
+                        velit
+                        facilis aliquam quae ab vel distinctio!</p>
+                    <h3 class="font-extrabold mt-5">llham yuda</h3>
+                    <p>businessman</p>
+                    <div class="flex justify-end">
+                        <img src="./images/circles.png" alt="">
+                    </div>
                 </div>
             </div>
-            <!--  current review -->
-            <div class="p-10 absolute top-40 right-40 lg:w-[433px] z-20 bg-white rounded-lg">
-                <img class="absolute -left-5 -top-5 border-4 border-white bg-white rounded-full"
-                    src="./images/client.png" alt="">
-                <p class="leading-7 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate doloribus velit
-                    facilis aliquam quae ab vel distinctio!</p>
-                <h3 class="font-extrabold mt-5">llham yuda</h3>
-                <p>businessman</p>
-                <div class="flex justify-end">
-                    <img src="./images/circles.png" alt="">
-                </div>
+        </section>
+        <!-- news and events ssection started -->
+        <section class="my-32">
+            <div class="text-center">
+                <h2 class="my-5 text-5xl font-extrabold">News & Events</h2>
+                <p class="text-[#777777] px-40">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime tempore adipisci, corrupti fuga
+                    reprehenderit autem doloremque magni fugit a ipsa provident asperiores inventore consectetur eius
+                    mollitia quas, ipsam nam ex!
+                </p>
             </div>
-            <!-- previus review -->
-            <div class="p-10 relative opacity-40 bg-white z-10 rounded-lg">
-                <img class="absolute -left-5 -top-5 border-4 border-white bg-white rounded-full"
-                    src="./images/client.png" alt="">
-                <p class="leading-7 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate doloribus velit
-                    facilis aliquam quae ab vel distinctio!</p>
-                <h3 class="font-extrabold mt-5">llham yuda</h3>
-                <p>businessman</p>
-                <div class="flex justify-end">
-                    <img src="./images/circles.png" alt="">
+
+            <!-- most popular events card -->
+            <div class="mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+               <!-- card-1 -->
+                <div class="card card-compact bg-base-100 ">
+                    <figure><img src="./images/news-1.png"
+                            alt="Shoes" /></figure>
+                    <div class="card-body space-y-2">
+                        <h2 class="text-base font-medium">Feb-05-2027</h2>
+                        <h1 class="text-xl font-extrabold">Collectiong 8 points for discount</h1>
+                        <p class="text-base font-medium text-[#777777]">If a dog chews shoes whose shoes does he choose?</p>
+                        <h4 class="text-base font-semibold">Learn More</h4>    
+                    </div>
                 </div>
+                <!-- card 2 -->
+                <div class="card card-compact bg-base-100">
+                    <figure><img src="./images/news-2.png"
+                            alt="Shoes" /></figure>
+                    <div class="card-body space-y-2">
+                        <h2 class="text-base font-medium">Feb-05-2027</h2>
+                        <h1 class="text-xl font-extrabold">Collectiong 8 points for discount</h1>
+                        <p class="text-base font-medium text-[#777777]">If a dog chews shoes whose shoes does he choose?</p>
+                        <h4 class="text-base font-semibold">Learn More</h4>    
+                    </div>
+                </div>
+                <!-- card-3 -->
+                <div class="card card-compact bg-base-100 ">
+                    <figure><img src="./images/news-3.png"
+                            alt="Shoes" /></figure>
+                    <div class="card-body space-y-2">
+                        <h2 class="text-base font-medium">Feb-05-2027</h2>
+                        <h1 class="text-xl font-extrabold">Collectiong 8 points for discount</h1>
+                        <p class="text-base font-medium text-[#777777]">If a dog chews shoes whose shoes does he choose?</p>
+                        <h4 class="text-base font-semibold">Learn More</h4>    
+                    </div>
+                </div>
+
             </div>
-        </div>
+
         </section>
     </main>
 
-
+    <!-- start the footer section -->
     <footer>
 
     </footer>
