added footer section from daisy ui and complete tea garden website

--- a/index.html
+++ b/index.html
@@ -260,9 +260,28 @@
     </main>
 
     <!-- start the footer section -->
-    <footer>
-
-    </footer>
+    <footer class="footer bg-neutral text-neutral-content p-32">
+        <nav class="space-y-3">
+          <h6 class="footer-title">Services</h6> 
+          <a class="link link-hover">Branding</a>
+          <a class="link link-hover">Design</a>
+          <a class="link link-hover">Marketing</a>
+          <a class="link link-hover">Advertisement</a>
+        </nav> 
+        <nav class="space-y-3">
+          <h6 class="footer-title">Company</h6> 
+          <a class="link link-hover">About us</a>
+          <a class="link link-hover">Contact</a>
+          <a class="link link-hover">Jobs</a>
+          <a class="link link-hover">Press kit</a>
+        </nav> 
+        <nav class="space-y-3">
+          <h6 class="footer-title">Legal</h6> 
+          <a class="link link-hover">Terms of use</a>
+          <a class="link link-hover">Privacy policy</a>
+          <a class="link link-hover">Cookie policy</a>
+        </nav>
+      </footer>
 </body>
 
 </html>
